# Yaufs

./: .dockerignore  Control-Plane.Dockerfile  Dockerfile  README.md  Template-Service.Dockerfile
.github/workflows/: control-plane-nightly.yaml  template-service-nightly.yaml  template-service.yaml
helm/yaufs/: Chart.yaml  values.yaml
helm/yaufs-control-plane/: Chart.yaml  values.yaml
helm/yaufs-control-plane/templates/: control-plane.yaml  crd-instance.yaml  crd-template.yaml  csi.yaml  linkerd.yaml  rbac.yaml  service.yaml  skytable.yaml
helm/yaufs-template-service/: Chart.yaml  values.yaml
helm/yaufs-template-service/templates/: csi.yaml  linkerd.yaml  service.yaml  surrealdb.yaml  template-service.yaml
helm/yaufs/templates/: tempalte-service.yaml
proto/: control-plane-v1.proto  template-service-v1.proto  template-service.proto
terraform/: .gitignore  apisix.tf  cert.tf  consul.tf  fluvio.tf  helm.tf  jaeger.tf  kubernetes.tf  linkerd.tf  main.tf  monitoring.tf  nginx.tf  outputs.tf  traefik.tf  variables.tf  vault.tf  yaufs.tf  zitadel.tf
terraform/config/: certs.yaml  consul.yaml  fluvio-chart-app.tgz  fluvio-chart-sys.tgz  issuer-secret.yaml  prometheus-scrapes.yaml  vault-issuer.yaml
terraform/config/apisix/: auth.yaml  consul.yaml  oidc-admin.yaml  tls.yaml
terraform/config/consul/: auth.yaml
terraform/config/grafana/: apisix.json  vault.json
terraform/modules/zitadel/: admin.tf  application.tf  main.tf  org.tf  output.tf  private_org.tf  public_org.tf
terraform/scripts/: linkerd.sh  oidc.sh  setup.sh  unseal.sh  vault-init.sh  zitadel.sh
yaufs-account-service/: Cargo.toml
yaufs-account-service/src/: docs.rs  error.rs  main.rs
yaufs-account-service/src/routes/: mod.rs
yaufs-apisix-request-id/: Cargo.toml
yaufs-apisix-request-id/src/: lib.rs
yaufs-auth-service/: Cargo.toml
yaufs-auth-service/src/: main.rs
yaufs-axum/: Cargo.toml
yaufs-axum/src/: error.rs  extractor.rs  lib.rs
yaufs-axum/src/router/: health.rs  mod.rs  redoc.rs
yaufs-codegen/: Cargo.toml
yaufs-codegen/src/: lib.rs
yaufs-common/: Cargo.toml  build.rs
yaufs-common/src/: auth.rs  error.rs  fluvio_util.rs  lib.rs  oidc.rs  proto.rs  telemetry.rs  tonic.rs  util.rs
yaufs-common/src/database/: id.rs  mod.rs  paging.rs  skytable.rs  surrealdb.rs
yaufs-common/src/net/: mod.rs  packet.rs
yaufs-common/src/tower/: auth.rs  mod.rs
yaufs-control-plane/: Cargo.toml
yaufs-control-plane/src/: main.rs
yaufs-control-plane/src/controller/: mod.rs
yaufs-control-plane/src/controller/crd/: instance.rs  mod.rs  template.rs
yaufs-control-plane/src/v1/: handler.rs  mod.rs
yaufs-control-service/: Cargo.toml  build.rs
yaufs-control-service/src/: error.rs  main.rs
yaufs-mcl/: Cargo.toml
yaufs-mcl/src/: main.rs
yaufs-mcl/src/proxy/: adapter.rs  connection.rs  mod.rs
yaufs-mcl/src/proxy/interceptor/: client.rs  mod.rs  server.rs
yaufs-monitoring/: Cargo.toml
yaufs-monitoring/src/: lib.rs  telemetry.rs
yaufs-proto/: Cargo.toml  build.rs
yaufs-proto/src/: fluvio.rs  lib.rs
yaufs-template-service/: Cargo.toml  build.rs
yaufs-template-service/src/: database.rs  main.rs
yaufs-template-service/src/surrealql/: migration.surrealql  up.surrealql
yaufs-template-service/src/v1/: handler.rs  mod.rs
yaufs-tonic/: Cargo.toml
yaufs-tonic/src/: lib.rs
