[package]
name = "yaufs-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["macros"] }
aide = { version = "0.9.0", features = ["axum", "axum-extra", "macros", "redoc"] }
axum-jsonschema = { version = "0.4.1", features = ["aide"] }
serde = { version = "1.0.152", features = ["derive"] }

axum-tracing-opentelemetry = "0.7.0"
schemars = "0.8.11"
axum-macros = "0.3.0"