[package]
name = "yaufs-common"
version = "0.1.0"
edition = "2021"

[dependencies]
yaufs-proto = { path = "../yaufs-proto" }

skytable = { version = "0.7.3", features = ["aio"], optional = true }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", rev = "5eafebd", optional = true }
tokio = { version = "1.24.1", features = ["rt"] }
tower-http = { version = "0.4.0", features = ["trace"] }
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1.0.152", features = ["derive"] }
nanoid = { version = "0.4.0", optional = true }
zitadel = { version = "3.1.21", features = ["credentials", "oidc"] }
generic-array = { version = "0.14.6", optional = true }
fluvio = { version = "0.17.0", features = ["rustls"], default-features = false, optional = true }

serde_json = "1.0.93"
hyper = "0.14.23"
tower = "0.4.13"
thiserror = "1.0.38"
cfg-if = "1.0.0"
version-compare = "0.1.1"
opentelemetry-http = "0.8.0"
tracing = "0.1.37"
tonic = "0.8.3"
tonic-health = "0.8.0"
opentelemetry = "0.19.0"
tracing-opentelemetry = "0.18.0"
cached = "0.42.0"
openidconnect = "2.5.0"

[features]
default = ["surrealdb", "skytable", "fluvio"]

testing = ["dep:nanoid"]
surrealdb = ["dep:surrealdb"]
skytable = ["dep:skytable", "dep:generic-array"]
fluvio = ["dep:fluvio"]
