[package]
name = "yaufs-common"
version = "0.1.0"
edition = "2021"

[dependencies]
yaufs-proto = { path = "../yaufs-proto" }

skytable = { version = "0.7.3", features = ["aio"], optional = true }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", rev = "5eafebd", optional = true }
tokio = { version = "1.24.1", features = ["rt"] }
tower-http = { version = "0.4.0", features = ["trace"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1.0.152", features = ["derive"] }
nanoid = { version = "0.4.0" }
zitadel = { version = "3.1.21", features = ["credentials", "oidc"] }
generic-array = { version = "0.14.6", optional = true }
fluvio = { version = "0.17.0", features = ["rustls"], default-features = false, optional = true }
schemars = { version = "0.8.12", optional = true }

bytes = { version = "1.4.0", optional = true }
integer-encoding = { version = "3.0.4", optional = true }
craftio-rs = { version = "0.1.0", optional = true }
mcproto-rs = { version = "0.2.0", optional = true }

serde_json = "1.0.93"
hyper = "0.14.23"
tower = "0.4.13"
thiserror = "1.0.38"
cfg-if = "1.0.0"
version-compare = "0.1.1"
opentelemetry-http = "0.7.0"
tracing = "0.1.37"
tonic = "0.8.3"
tonic-health = "0.8.0"
opentelemetry = "0.18.0"
tracing-opentelemetry = "0.18.0"
cached = "0.42.0"
openidconnect = "3.0.0"

[features]
default = ["surrealdb", "skytable", "fluvio", "schemars", "open-telemetry", "net"]
testing = []

net = ["dep:bytes", "dep:integer-encoding", "dep:craftio-rs", "dep:mcproto-rs"]
open-telemetry = []
schemars = ["dep:schemars"]
surrealdb = ["dep:surrealdb"]
skytable = ["dep:skytable", "dep:generic-array"]
fluvio = ["dep:fluvio"]
