[package]
name = "yaufs-control-plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaufs-common = { path = "../yaufs-common", features = ["skytable"], default-features = false }

tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
tower-http = { version = "0.3.5", features = ["trace"] }

cfg-if = "1.0.0"
tower = "0.4.13"
tonic = "0.8.3"
async-trait = "0.1.60"
tracing = "0.1.37"
thiserror = "1.0.38"

[dev-dependencies]
yaufs-common = { path = "../yaufs-common", features = ["testing"] }