[package]
name = "yaufs-control-plane"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaufs-common = { path = "../yaufs-common", features = ["skytable", "fluvio"], default-features = false }

tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
tower-http = { version = "0.3.5", features = ["trace"] }
fluvio = { version = "0.16.0", features = ["rustls"], default-features = false }
kube = { version = "0.78.0", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }

nanoid = "0.4.0"
chrono = "0.4.23"
schemars = "0.8.11"
futures = "0.3.26"
serde_json = "1.0.93"
cfg-if = "1.0.0"
tower = "0.4.13"
tonic = "0.8.3"
async-trait = "0.1.60"
tracing = "0.1.37"
thiserror = "1.0.38"
lazy_static = "1.4.0"
async_once = "0.2.6"

[dev-dependencies]
yaufs-common = { path = "../yaufs-common", features = ["testing"] }