[package]
name = "yaufs-control-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaufs-monitoring = { path = "../yaufs-monitoring" }

tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }

tonic = "0.8.3"
prost = "0.11.5"
openidconnect = "2.4.0"
axum = "0.6.1"
async-trait = "0.1.60"
tracing = "0.1.37"
thiserror = "1.0.38"

[build-dependencies]
tonic-build = "0.8.4"
