[package]
name = "yaufs-mcl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaufs-common = { path = "../yaufs-common", features = ["skytable", "fluvio", "net"], default-features = false }

reqwest = { version = "0.11.16", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }

anyhow = "1.0.70"
async-trait = "0.1.68"
bytes = "1.4.0"
getset = "0.1.2"
kanal = "0.1.0-pre8"
lazy_static = "1.4.0"
tracing = "0.1.37"
rsa = "0.9.0-pre.0"
mojang-api = "0.6.1"
openssl = "0.10.48"
