[package]
name = "yaufs-monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
opentelemetry = { version = "0.18.0", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = ["tonic", "tls", "tls-roots"] }
tonic = { version = "0.8.3", features = ["tls"] }

url = "2.3.1"
tracing = "0.1.36"
tracing-opentelemetry = "0.18.0"
log = "0.4.17"
simple_logger = "4.0.0"
dotenv = "0.15.0"

