[package]
name = "yaufs-monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-tracing-opentelemetry = { version = "0.7.4", features = ["jaeger"] }

tracing-subscriber = "0.3.16"
tracing = "0.1.36"
tracing-opentelemetry = "0.18.0"
