[package]
name = "yaufs-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaufs-codegen = { path = "../yaufs-codegen", features = ["skytable"] }

serde = { version = "1.0.152", features = ["derive"] }

skytable = "0.7.3"
serde_json = "1.0.93"
tonic = "0.8.3"
prost = "0.11.6"

[build-dependencies]
tonic-build = "0.8.4"
