[package]
name = "yaufs-template-service"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaufs-common = { path = "../yaufs-common", features = ["surrealdb", "fluvio", "open-telemetry"], default-features = false }

surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", rev = "5eafebd" }

tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["trace"] }
fluvio = { version = "0.17.0", features = ["rustls"], default-features = false }

cfg-if = "1.0.0"
tower = "0.4.13"
tonic = "0.8.3"
async-trait = "0.1.60"
tracing = "0.1.37"
thiserror = "1.0.38"

[dev-dependencies]
yaufs-common = { path = "../yaufs-common", features = ["testing"] }
